[metadata]
name = luma.emulator
version = attr: luma.emulator.__version__
description = A suite of pseudo-devices for luma.core components
long_description = file: README.rst, CONTRIBUTING.rst, CHANGES.rst
long_description_content_type = text/x-rst
keywords = raspberry pi, orange, banana pi, rpi, opi, sbc, oled, lcd, led, display, screen, spi, i2c, emulator
author = Richard Hull
author_email = richard.hull@destructuring-bind.org
url = https://github.com/rm-hull/luma.emulator
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Development Status :: 5 - Production/Stable
    Intended Audience :: Education
    Intended Audience :: Developers
    Topic :: Education
    Topic :: System :: Hardware
    Topic :: System :: Hardware :: Hardware Drivers
    Topic :: Software Development :: Libraries :: pygame
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13

[options]
zip_safe = False
packages = find_namespace:
python_requires = >=3.8, <4
include_package_data = True
install_requires =
    luma.core>=2.4.0
    pygame
tests_require =
    pytest
    pytest-cov
    pytest-timeout

[options.packages.find]
include = luma*

[options.extras_require]
docs =
    sphinx>=1.5.1
    sphinx-rtd-theme
qa =
    flake8
    rstcheck
test =
    pytest
    pytest-cov
    pytest-timeout

[options.package_data]
luma.emulator.images =
    *.png

[bdist_wheel]
universal = 1

[flake8]
ignore = E127, E128, E241, E402, E501, E731
exclude =
    .ropeproject,
    .tox,
    .eggs,
    # No need to traverse our git directory
    .git,
    # There's no value in checking cache directories
    __pycache__,
    doc,
    build,
    dist

[aliases]
test=pytest
